# DigitRecognizer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  sol.ipynb  sol.py
.ipynb_checkpoints/: sol-checkpoint.ipynb
data/: sol.model  submission.csv
include/: kernel.h  perceptron.h
lib/dirtrav/: dirtrav.c
src/: CMakeLists.txt  drtest.cc  drtrain.cc
